--- a/src/lib/layouts/default.astro
+++ b/src/lib/layouts/default.astro
@@ -7,7 +7,12 @@ const primaryNavigationLinks = [
   { href: "/Stat-N-Track/", label: "Home" },
   { href: "/Stat-N-Track/user/300752/", label: "Jacob Collins" },
   { href: "/Stat-N-Track/user/815162/", label: "Jack Glenzinski" },
-  { href: "/Stat-N-Track/user/251134", label: 'Kyle Klendworth' },
+  { href: "/Stat-N-Track/user/251134/", label: "Kyle Klendworth" },
+  { href: "/Stat-N-Track/user/182407/", label: "Antonio Estrada" },
+  { href: "/Stat-N-Track/user/188056/", label: "Doug South" },
+  { href: "/Stat-N-Track/user/589449/", label: "Bryan Campbell2" },
+  { href: "/Stat-N-Track/user/714312/", label: "Sam Karasala" },
+  { href: "/Stat-N-Track/user/746377/", label: "Ty Quila" },
   { href: "/Stat-N-Track/shared-subsessions/", label: "Shared Subsessions" },
 ];
 const schedulingLinks = id && ['300752', '815162'].includes(id) ? [
