--- a/src/pages/shared-subsessions.astro
+++ b/src/pages/shared-subsessions.astro
@@ -53,59 +53,12 @@ const subsessionIdToSharedRaceResultsMap = sharedSubsessionRaceResults.reduce(
   new Map()
 );
 const headToHeadWins: Record<string, Array<number>> = {};
-const results = sharedSubsessions.map((subsession) => {
-  const {
-    subsession_id,
-    track,
-    allowed_licenses,
-    license_category,
-    event_average_lap,
-    event_laps_complete,
-    event_strength_of_field,
-    num_caution_laps,
-    num_cautions,
-    num_lead_changes,
-    race_week_num,
-    season_name,
-  } = subsession;
-  // Current Users in race session
-  const subsessionResultsForId =
-    subsessionIdToSharedRaceResultsMap.get(subsession_id);
-  const results =
-    subsessionResultsForId && Array.isArray(subsessionResultsForId)
-      ? subsessionResultsForId.sort((x, y) => {
-          if (x.finish_position > y.finish_position) {
-            return 1;
-          } else if (y.finish_position > x.finish_position) {
-            return -1;
-          }
-          return 0;
-        })
-      : [];
-
-  const [winner] = results;
-  const { display_name, simsession_type_name } = winner;
-  const session = {
-    simsession_type_name,
-    results,
-  };
-  if (headToHeadWins[display_name]) {
-    headToHeadWins[display_name].push(subsession_id);
-  } else {
-    headToHeadWins[display_name] = [subsession_id];
-  }
-  const { group_name: License } = Array.isArray(allowed_licenses)
-    ? (allowed_licenses.slice(0, 2).pop() as LicenseType)
-    : { group_name: "" };
-  const assertTrackAsTrackType = () => track as Track;
-  const trackInfo = assertTrackAsTrackType();
-  return {
-    subsessionInfo: {
+const results = sharedSubsessions
+  .map((subsession) => {
+    const {
       subsession_id,
-      Track: `${trackInfo.track_name} ${
-        trackInfo.config_name !== "N/A" ? trackInfo.config_name : ""
-      }`,
-      License,
+      track,
+      allowed_licenses,
       license_category,
       event_average_lap,
       event_laps_complete,
@@ -115,10 +68,65 @@ const results = sharedSubsessions.map((subsession) => {
       num_lead_changes,
       race_week_num,
       season_name,
-    },
-    session,
-  };
-});
+    } = subsession;
+    // Current Users in race session
+    const subsessionResultsForId =
+      subsessionIdToSharedRaceResultsMap.get(subsession_id);
+    const results =
+      subsessionResultsForId &&
+      Array.isArray(subsessionResultsForId) &&
+      new Set(subsessionResultsForId.map((result) => result.finish_position))
+        .size > 1
+        ? subsessionResultsForId.sort((x, y) => {
+            if (x.finish_position > y.finish_position) {
+              return 1;
+            } else if (y.finish_position > x.finish_position) {
+              return -1;
+            }
+            return 0;
+          })
+        : [];
+
+    if (results.length) {
+      const [winner] = results;
+      const { display_name, simsession_type_name } = winner;
+      const session = {
+        simsession_type_name,
+        results,
+      };
+      if (headToHeadWins[display_name]) {
+        headToHeadWins[display_name].push(subsession_id);
+      } else {
+        headToHeadWins[display_name] = [subsession_id];
+      }
+      const { group_name: License } = Array.isArray(allowed_licenses)
+        ? (allowed_licenses.slice(0, 2).pop() as LicenseType)
+        : { group_name: "" };
+      const assertTrackAsTrackType = () => track as Track;
+      const trackInfo = assertTrackAsTrackType();
+      return {
+        subsessionInfo: {
+          subsession_id,
+          Track: `${trackInfo.track_name} ${
+            trackInfo.config_name !== "N/A" ? trackInfo.config_name : ""
+          }`,
+          License,
+          license_category,
+          event_average_lap,
+          event_laps_complete,
+          event_strength_of_field,
+          num_caution_laps,
+          num_cautions,
+          num_lead_changes,
+          race_week_num,
+          season_name,
+        },
+        session,
+      };
+    }
+    return null;
+  })
+  .filter((v) => v);
 export const handleKey = ({
   key,
   subsessionInfo,
@@ -182,7 +190,7 @@ const description = "Shared subsessions for all Stat 'n' Track users";
     x-data={JSON.stringify(
       results.reduce((object: Record<string, unknown>, result) => {
         object.previouslyToggled = "";
-        object[`toggle${result.subsessionInfo.subsession_id}`] = false;
+        object[`toggle${result?.subsessionInfo.subsession_id}`] = false;
         return object;
       }, {})
     )}
@@ -193,15 +201,15 @@ const description = "Shared subsessions for all Stat 'n' Track users";
       {
         results.map((result) => (
           <div
-            id={String(result.subsessionInfo.subsession_id)}
+            id={String(result?.subsessionInfo.subsession_id)}
             x-cloak
-            x-show={`toggle${result.subsessionInfo.subsession_id}`}
+            x-show={`toggle${result?.subsessionInfo.subsession_id}`}
             x-transition:enter.duration.500ms
             x-transition:leave.duration.0ms
           >
             <a
               class="underline"
-              href={`/Stat-N-Track/subsession/${result.subsessionInfo.subsession_id}`}
+              href={`/Stat-N-Track/subsession/${result?.subsessionInfo.subsession_id}`}
             >
               <div class="text-center py-4 border-2">
                 <p>
@@ -209,7 +217,7 @@ const description = "Shared subsessions for all Stat 'n' Track users";
                 </p>
               </div>
             </a>
-            <RaceResults session={result.session} />
+            <RaceResults session={result?.session} />
           </div>
         ))
       }
@@ -217,6 +225,7 @@ const description = "Shared subsessions for all Stat 'n' Track users";
         <table x-ref="Table" x-data="table" class="text-center col-span-1">
           <tr x-ref="Headings">
             {
+              // @ts-expect-error
               Object.keys(results[0].subsessionInfo).map((key) => (
                 <th
                   id={`Table ${key} ${results.length}`}
@@ -233,26 +242,29 @@ const description = "Shared subsessions for all Stat 'n' Track users";
               <tr
                 x-ref={`Table ${rowNumber}`}
                 class={bgColorByUserDisplayName(
-                  result.session.results[0].display_name
+                  result?.session.results[0].display_name || ""
                 )}
               >
-                {Object.keys(result.subsessionInfo).map((key) => (
-                  <td
-                    x-ref={`Table ${key} ${rowNumber}`}
-                    id={
-                      // @ts-ignore
-                      `${key}~${rowNumber}~${result.subsessionInfo[key]}`
-                    }
-                    class="border-2"
-                  >
-                    <Fragment
-                      set:html={handleKey({
-                        key,
-                        subsessionInfo: result.subsessionInfo,
-                      })}
-                    />
-                  </td>
-                ))}
+                {
+                  // @ts-expect-error
+                  Object.keys(result.subsessionInfo).map((key) => (
+                    <td
+                      x-ref={`Table ${key} ${rowNumber}`}
+                      id={
+                        // @ts-ignore
+                        `${key}~${rowNumber}~${result.subsessionInfo[key]}`
+                      }
+                      class="border-2"
+                    >
+                      <Fragment
+                        set:html={handleKey({
+                          key,
+                          subsessionInfo: result?.subsessionInfo || {},
+                        })}
+                      />
+                    </td>
+                  ))
+                }
               </tr>
             ))
           }
