Reduce query size for Subsessions landing pages

--- a/src/pages/user/[id]/subsessions/by-track/[trackSlug].astro
+++ b/src/pages/user/[id]/subsessions/by-track/[trackSlug].astro
@@ -60,8 +60,33 @@ const tracksFromDb: Array<{ track: unknown | Track }> = await db
 const tracks = tracksFromDb as Array<{ track: Track }>;
 const generatedTrackMap = generateTrackMap({ tracks });
 const { trackName, configName } = generatedTrackMap.get(trackSlug) || {};
-const allSubsessionsForTrack = await db
-  .select()
+const rawSubsessions = await db
+  .select({
+    subsession_id: Subsession.subsession_id,
+    track: Subsession.track,
+    corners_per_lap: Subsession.corners_per_lap,
+    allowed_licenses: Subsession.allowed_licenses,
+    license_category: Subsession.license_category,
+    finish_position: SubsessionRaceResults.finish_position,
+    finish_position_in_class: SubsessionRaceResults.finish_position_in_class,
+    laps_lead: SubsessionRaceResults.laps_lead,
+    laps_complete: SubsessionRaceResults.laps_complete,
+    average_lap: SubsessionRaceResults.average_lap,
+    best_lap_time: SubsessionRaceResults.best_lap_time,
+    reason_out: SubsessionRaceResults.reason_out,
+    champ_points: SubsessionRaceResults.champ_points,
+    starting_position: SubsessionRaceResults.starting_position,
+    starting_position_in_class:
+      SubsessionRaceResults.starting_position_in_class,
+    car_class_short_name: SubsessionRaceResults.car_class_short_name,
+    division_name: SubsessionRaceResults.division_name,
+    new_license_level: SubsessionRaceResults.new_license_level,
+    new_cpi: SubsessionRaceResults.new_cpi,
+    newi_rating: SubsessionRaceResults.newi_rating,
+    incidents: SubsessionRaceResults.incidents,
+    car_name: SubsessionRaceResults.car_name,
+    aggregate_champ_points: SubsessionRaceResults.aggregate_champ_points,
+  })
   .from(Subsession)
   .innerJoin(
     SubsessionRaceResults,
@@ -75,14 +100,31 @@ const allSubsessionsForTrack = await db
     )
   )
   .orderBy(desc(Subsession.subsession_id));
-const subsessions = allSubsessionsForTrack.filter(
-  ({
-    Subsession: {
+const subsessions = rawSubsessions
+  .filter(
+    ({
       // @ts-expect-error
       track: { track_name, config_name },
-    },
-  }) => track_name === trackName && config_name === configName
-);
+    }) => track_name === trackName && config_name === configName
+  )
+  .map((subsession) => {
+    const {
+      subsession_id,
+      track,
+      corners_per_lap,
+      allowed_licenses,
+      license_category,
+      ...rest
+    } = subsession;
+    const Subsession = {
+      subsession_id,
+      track,
+      corners_per_lap,
+      allowed_licenses,
+      license_category,
+    };
+    return { Subsession, SubsessionRaceResults: rest };
+  });
 ---
 
 <SubsessionsLayout {id} {seoTitle} {seoDescription} {subsessions} />
