Increment divisions in display by 1 (0 indexed for some reason)

--- a/src/lib/layouts/standings.astro
+++ b/src/lib/layouts/standings.astro
@@ -37,7 +37,7 @@ const finalData: Array<Record<string, any>> = standingsResults.map(
       season_number_of_year,
       car_class_id,
       season_summary: season_id,
-      division,
+      division: division + 1,
       division_rank,
       overall_rank,
       points,
