--- a/src/pages/user/[id]/head-to-head/[otherId].astro
+++ b/src/pages/user/[id]/head-to-head/[otherId].astro
@@ -20,8 +20,8 @@ export async function getStaticPaths() {
 }
 const { id, otherId } = Astro.params;
 const userIds = [id, otherId];
-const title = `Head To Head Matchup: ${userIdToNameMap.get(id)} versus ${userIdToNameMap.get(otherId)}`;
-const description = `Subession result comparison between ${userIdToNameMap.get(id)} and ${userIdToNameMap.get(otherId)}`;
+const title = `Head To Head Matchup: ${userIdToNameMap.get(Number(id))} versus ${userIdToNameMap.get(Number(otherId))}`;
+const description = `Subession result comparison between ${userIdToNameMap.get(Number(id))} and ${userIdToNameMap.get(Number(otherId))}`;
 ---
 
 <SharedSubsessionsLayout {title} {description} {userIds} />
