--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,10 +5,12 @@ const driverLinks = [
   { href: "/Stat-N-Track/user/188056/", label: "Doug South" },
   { href: "/Stat-N-Track/user/251134/", label: "Kyle Klendworth" },
   { href: "/Stat-N-Track/user/300752/", label: "Jacob Collins" },
+  { href: "/Stat-N-Track/user/331322/", label: "Jesper Öhrman" },
   { href: "/Stat-N-Track/user/589449/", label: "Bryan Campbell2" },
   { href: "/Stat-N-Track/user/714312/", label: "Sam Karasala" },
   { href: "/Stat-N-Track/user/746377/", label: "Ty Quila" },
   { href: "/Stat-N-Track/user/815162/", label: "Jack Glenzinski" },
+  { href: "/Stat-N-Track/user/908575/", label: "Cody Cavaco" },
 ];
 ---
 
